# ScreenExdender

./: CMakeLists.txt  README.md
buildLinux/: CMakeCache.txt  cmake_install.cmake
buildMacos/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_install.cmake.tmp64cae  package-lock.json
include/: Communication.h  ConnectionCodeGeneration.h  MainFrame.h  capturing.h
lib/: Communication.cpp  ConnectionCodeGeneration.cpp  MainFrame.cpp
lib/WebSockets/include/: Base64.h  SHA1.h  WebSocketFrame.h  WebSocketServer.h
lib/WebSockets/src/: Base64.cpp  SHA1.cpp  WebSocketFrame.cpp  WebSocketServer.cpp
lib/WebSockets/test/: Makefile  test_server  test_server.cpp
output/: ScreenExtender
src/: ScreenCapture.mm  WallpaperCapture.mm  main.cpp  test.mm
